<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnIncr"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btnIncluir"/>

    <Button
        android:id="@+id/btnAltr"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAlterar" />

    <Button
        android:id="@+id/btnExcr"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btnExcluir" />

    <Button
        android:id="@+id/btnCstr"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btnConsultar" />

</LinearLayout>