<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edtTxCdPrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/lblBtnCodigo"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edtTxDcr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lblDescricao"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/edtTxPrecVnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintPrecoVenda"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnOk"/>

    <TextView
        android:id="@+id/txViewRtl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblUltimoRegistro"/>

    <TextView
        android:id="@+id/txViewRstd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>